tests/snapshots/examples_fixtures/generics__working__accepts__alias_concrete_tuple.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/alias_concrete_tuple.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
