tests/snapshots/examples_fixtures/generics__working__accepts__alias_effect_row_parameter.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/alias_effect_row_parameter.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
