tests/snapshots/examples_fixtures/generics__working__accepts__alias_generic_function.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/alias_generic_function.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
