tests/snapshots/examples_fixtures/generics__working__accepts__annot_identity_signature.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/annot_identity_signature.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
