tests/snapshots/examples_fixtures/generics__working__accepts__annot_lambda_names_rigid_param.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/annot_lambda_names_rigid_param.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
