tests/snapshots/examples_fixtures/generics__working__accepts__annot_map_with_effect_row.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/annot_map_with_effect_row.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
