tests/snapshots/examples_fixtures/generics__working__accepts__annot_polymorphic_recursion.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/annot_polymorphic_recursion.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
