tests/snapshots/examples_fixtures/generics__working__accepts__annot_wrap_option.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/annot_wrap_option.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
