tests/snapshots/examples_fixtures/generics__working__accepts__class_contextual_instance.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/class_contextual_instance.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
