tests/snapshots/examples_fixtures/generics__working__accepts__class_instance_two_types.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/class_instance_two_types.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
