tests/snapshots/examples_fixtures/generics__working__accepts__class_superclass_chain.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/working/accepts/class_superclass_chain.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
